# my-amazing-api

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
dockerfiles/api/: Dockerfile
dockerfiles/db/initdb.d/: 01_init.sql
docs/: api.md  database.md  dependencies.md  exceptions.md  external.md  index.md  models.md  repositories.md  schemas.md  services.md  usage.md
src/: main.py
src/api/v1/: countries.py  import_data.py
src/database/: __init__.py
src/dependencies/: __init__.py
src/exceptions/: __init__.py
src/models/: __init__.py  dat_country.py
src/repositories/: countries_repository.py  sqlalchemy_countries_repository.py
src/schemas/: countries.py  import_data.py
src/services/: countries_service.py  import_service.py
tests/: __init__.py  conftest.py
tests/services/: test_countries_service.py  test_import_service.py
