[project]
name = "pj-mdpi"
version = "0.1.0"
description = ""
authors = [
    {name = "Olivier Chenevotot", email = "olivier.chenevotot@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "ruff (>=0.11.2,<0.12.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
